sysyruntimelibrary-master/functional_test/13_and.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/13_and.sy:4:13: error: syntax error, unexpected R_PARENTHESIS
4| 	a = getint()
 |              ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/13_and.sy:0:0: error: not find main function
